--- a/twitter2.html
+++ b/twitter2.html
@@ -36,4 +36,44 @@
     <a  class="nav__btn" href="#">Высказаться</a>
   </nav>
 
+  <main>
+    <header class="main__header">
+      <h2>Cообщения</h2>
+      <img src="img/chat-icn.svg" alt="Иконка ответа">
+    </header>
+
+    <article class="chat">
+      <img class="chat__ava" src="img/ava-vasya.png" alt="Аватарка пользователя">
+      <div class="chat__body">
+        <header class="chat__body__header">
+         <h3>Вaсилий Ночь</h3>
+         <a class="chat__body__header__username" href="#">@vasya.night</a>
+         <a class="chat__body__header__data" href="#">11 октября</a>
+        </header>
+        <p>Привет, киберстранник. Настала пор... </p>
+      </div>
+   </article>
+   <article class="chat">
+     <img class="chat__ava" src="img/ava-dale.png" alt="Аватарка пользователя">
+     <div class="chat__body">
+       <header class="chat__body__header">
+        <h3>Агент Д</h3>
+        <a class="chat__body__header__username" href="#">@win-twin</a>
+        <a class="chat__body__header__data" href="#">3 октября</a>
+       </header>
+       <p>Открою тебе маленький секрет. Кажд...</p>
+     </div>
+  </article>
+  <article class="chat">
+    <img class="chat__ava" src="img/ava-inna.png" alt="Аватарка пользователя">
+    <div class="chat__body">
+      <header class="chat__body__header">
+       <h3>Инна Берг</h3>
+       <a class="chat__body__header__username" href="#">@inna-b</a>
+       <a class="chat__body__header__data" href="#">2 октября</a>
+      </header>
+      <p>Ты думаешь, я не понимаю. Эта безн...</p>
+    </div>
+ </article>
+
 </body>
