--- a/twitter2.html
+++ b/twitter2.html
@@ -39,7 +39,7 @@
   <main>
     <header class="main__header">
       <h2>Cообщения</h2>
-      <img src="img/chat-icn.svg" alt="Иконка ответа">
+      <img src="img/message-icn.svg" alt="Иконка ответа">
     </header>
 
     <article class="chat">
@@ -52,8 +52,8 @@
         </header>
         <p>Привет, киберстранник. Настала пор... </p>
       </div>
-   </article>
-   <article class="chat">
+    </article>
+    <article class="chat chat__chosen">
      <img class="chat__ava" src="img/ava-dale.png" alt="Аватарка пользователя">
      <div class="chat__body">
        <header class="chat__body__header">
@@ -63,8 +63,8 @@
        </header>
        <p>Открою тебе маленький секрет. Кажд...</p>
      </div>
-  </article>
-  <article class="chat">
+   </article>
+   <article class="chat">
     <img class="chat__ava" src="img/ava-inna.png" alt="Аватарка пользователя">
     <div class="chat__body">
       <header class="chat__body__header">
@@ -74,6 +74,36 @@
       </header>
       <p>Ты думаешь, я не понимаю. Эта безн...</p>
     </div>
- </article>
+   </article>
+   </main>
+
+
+   <div class="communication">
+    <header class="main__header">
+      <h2>Агент Д</h2>
+      <p>@win-twin</p>
+    </header>
+
+   <div class="communication__body__mymessage">
+    <div class="communication__body__mymessage__message">
+     <p>Слушай, как не умереть со скуки в этой жизни?</p>
+    </div>
+    <p class="communication__body__date">11 октября, 12:00 </p>
+   </div>
+   <div class="communivation__body__hismessage">
+     <ul>
+       <li><img class="communication__body__ava" src="img/ava-dale.png" alt=""></li>
+       <li><div class="communication__body__hismessage__message">
+         <p>Открою тебе маленький секрет. Каждый день, раз в&nbsp;день, делай себе маленький подарок. Не&nbsp;планируй заранее, не&nbsp;жди его, просто пусть он&nbsp;случается. Это может быть новая рубашка или послеобеденный сон в&nbsp;кабинете, или две чашки хорошего, горячего, черного кофе.</p>
+       </div>
+       <p class="communication__body__date">11 октября, 16:40 </p></li>
+     </ul>
+   </div>
+   <div class="send">
+     <ul>
+       <li><p>Введите сообщение</p></li>
+       <li><img src="img/send-icn.svg" alt=""></li>
+     </ul>
+   </div>
 
 </body>
