--- a/twitter.html
+++ b/twitter.html
@@ -36,6 +36,96 @@
     <a class="nav__btn" href="#">Высказаться</a>
   </nav>
 
+  <main class="main">
+    <header class="main__header">
+      <h2>Последние высказывания</h2>
+      <img src="img/sort-icn.svg" alt="Иконка сротировки">
+    </header>
+
+    <article class="tweet">
+      <img class="tweet__ava" src="img/ava-vasya.png" alt="Аватарка пользователя">
+      <div class="tweet__body">
+        <header class="tweet__body__header">
+          <h3>Василий Ночь</h3>
+          <a href="#">@vasya.night</a>
+          <a href="#">11 октября</a>
+        </header>
+        <p>Когда вы&nbsp;полагаете, что именно ваш самолет разобьется, или что именно ваш проект все назовут идиотским, или что именно вас все высмеют и&nbsp;растопчут, вы&nbsp;по&nbsp;сути говорите себе: &laquo;Я&nbsp;&mdash; исключение из&nbsp;правила, я&nbsp;не&nbsp;такой, как все остальные; я&nbsp;уникальный и&nbsp;особенный&raquo;. Это чистой воды нарциссизм. Вы&nbsp;полагаете, что именно ваши проблемы заслуживают особого обращения, что именно ваши проблемы уникальны и&nbsp;не&nbsp;подчиняются законам физической вселенной.</p>
+        <ul class="tweet__body__actions">
+          <li>
+            <img src="img/reply-icn.svg" alt="">
+          </li>
+          <li>
+            <img src="img/retweet-icn.svg" alt="">
+            <span>10</span>
+          </li>
+          <li>
+            <img src="img/like-icn.svg" alt="">
+            <span>32</span>
+          </li>
+          <li>
+            <img src="img/link-icn.svg" alt="">
+          </li>
+        </ul>
+      </div>
+    </article>
+    <article class="tweet">
+      <img class="tweet__ava" src="img/ava-wise.png" alt="Аватарка пользователя">
+      <div class="tweet__body">
+        <header class="tweet__body__header">
+          <h3>Мудрая выдра</h3>
+          <a href="#">@wisewise</a>
+          <a href="#">11 октября</a>
+        </header>
+        <p>Мы&nbsp;все переоцениваем свои навыки и&nbsp;стремления и&nbsp;недооцениваем навыки и&nbsp;стремления других. Большинство людей уверены, что обладают интеллектом выше среднего и&nbsp;лучше справляются практически со&nbsp;всеми задачами,&nbsp;&mdash; особенно если это абсолютно не&nbsp;так.</p>
+        <ul class="tweet__body__actions">
+          <li>
+            <img src="img/reply-icn.svg" alt="">
+          </li>
+          <li>
+            <img src="img/retweet-icn.svg" alt="">
+            <span>5</span>
+          </li>
+          <li>
+            <img src="img/like-icn.svg" alt="">
+            <span>17</span>
+          </li>
+          <li>
+            <img src="img/link-icn.svg" alt="">
+          </li>
+        </ul>
+      </div>
+    </article>
+    <article class="tweet">
+      <img class="tweet__ava" src="img/ava-kkoderka.png" alt="Аватарка пользователя">
+      <div class="tweet__body">
+        <header class="tweet__body__header">
+          <h3>Кккодерка</h3>
+          <a href="#">@kkkoderka</a>
+          <a href="#">11 октября</a>
+        </header>
+        <p>Мы&nbsp;разрабатываем и&nbsp;письма, и&nbsp;сайты, используя одни и&nbsp;те&nbsp;же языки&nbsp;&mdash; HTML и&nbsp;CSS. Происходящее в&nbsp;исходном коде html-писем совсем не&nbsp;похоже на&nbsp;то, что можно увидеть в&nbsp;среде разработки современного фронтендера. Вам даже может показаться, что вы&nbsp;вернулись в&nbsp;веб-средневековье.</p>
+        <ul class="tweet__body__actions">
+          <li>
+            <img src="img/reply-icn.svg" alt="">
+          </li>
+          <li>
+            <img src="img/retweet-icn.svg" alt="">
+            <span>10</span>
+          </li>
+          <li>
+            <img src="img/like-icn.svg" alt="">
+            <span>32</span>
+          </li>
+          <li>
+            <img src="img/link-icn.svg" alt="">
+          </li>
+        </ul>
+      </div>
+    </article>
+  </main>
+
+
   <aside>
     <ul>
       <li>Ваши друзья</li>
@@ -86,95 +176,6 @@
       <li>Показать еще</li>
     </ul>
   </aside>
-
-  <main>
-    <header class="main__header">
-      <h2>Последние высказывания</h2>
-      <img src="img/sort-icn.svg" alt="Иконка сротировки">
-    </header>
-
-    <article class="tweet">
-      <img class="tweet__ava" src="img/ava-vasya.png" alt="Аватарка пользователя">
-      <div class="tweet__body">
-        <header class="tweet__body__header">
-          <h3>Василий Ночь</h3>
-          <a href="#">@vasya.night</a>
-          <a href="#">11 октября</a>
-        </header>
-        <p>Когда вы полагаете, что именно ваш самолет разобьется, или что именно ваш проект все назовут идиотским, или что именно вас все высмеют и растопчут, вы по сути говорите себе: «Я — исключение из правила, я не такой, как все остальные; я уникальный и особенный». Это чистой воды нарциссизм. Вы полагаете, что именно ваши проблемы заслуживают особого обращения, что именно ваши проблемы уникальны и не подчиняются законам физической вселенной.</p>
-        <ul class="tweet__body__actions">
-          <li>
-            <img src="img/reply-icn.svg" alt="">
-          </li>
-          <li>
-            <img src="img/retweet-icn.svg" alt="">
-            <span>10</span>
-          </li>
-          <li>
-            <img src="img/like-icn.svg" alt="">
-            <span>32</span>
-          </li>
-          <li>
-            <img src="img/link-icn.svg" alt="">
-          </li>
-        </ul>
-      </div>
-    </article>
-    <article class="tweet">
-      <img class="tweet__ava" src="img/ava-wise.png" alt="Аватарка пользователя">
-      <div class="tweet__body">
-        <header class="tweet__body__header">
-          <h3>Мудрая выдра</h3>
-          <a href="#">@wisewise</a>
-          <a href="#">11 октября</a>
-        </header>
-        <p>Мы все переоцениваем свои навыки и стремления и недооцениваем навыки и стремления других. Большинство людей уверены, что обладают интеллектом выше среднего и лучше справляются практически со всеми задачами, — особенно если это абсолютно не так.</p>
-        <ul class="tweet__body__actions">
-          <li>
-            <img src="img/reply-icn.svg" alt="">
-          </li>
-          <li>
-            <img src="img/retweet-icn.svg" alt="">
-            <span>5</span>
-          </li>
-          <li>
-            <img src="img/like-icn.svg" alt="">
-            <span>17</span>
-          </li>
-          <li>
-            <img src="img/link-icn.svg" alt="">
-          </li>
-        </ul>
-      </div>
-    </article>
-    <article class="tweet">
-      <img class="tweet__ava" src="img/ava-kkoderka.png" alt="Аватарка пользователя">
-      <div class="tweet__body">
-        <header class="tweet__body__header">
-          <h3>Кккодерка</h3>
-          <a href="#">@kkkoderka</a>
-          <a href="#">11 октября</a>
-        </header>
-        <p>Мы разрабатываем и письма, и сайты, используя одни и те же языки — HTML и CSS. Происходящее в исходном коде html-писем совсем не похоже на то, что можно увидеть в среде разработки современного фронтендера. Вам даже может показаться, что вы вернулись в веб-средневековье.</p>
-        <ul class="tweet__body__actions">
-          <li>
-            <img src="img/reply-icn.svg" alt="">
-          </li>
-          <li>
-            <img src="img/retweet-icn.svg" alt="">
-            <span>10</span>
-          </li>
-          <li>
-            <img src="img/like-icn.svg" alt="">
-            <span>32</span>
-          </li>
-          <li>
-            <img src="img/link-icn.svg" alt="">
-          </li>
-        </ul>
-      </div>
-    </article>
-  </main>
 
 </body>
 </html>
