--- a/twitter2.html
+++ b/twitter2.html
@@ -78,32 +78,38 @@
    </main>
 
 
-   <div class="communication">
-    <header class="main__header">
-      <h2>Агент Д</h2>
-      <p>@win-twin</p>
-    </header>
+   <article class="communication">
+    <div>
+     <header class="main__header">
+       <h2>Агент Д</h2>
+       <p class="communication__main__header__nickname">@win-twin</p>
+     </header>
 
-   <div class="communication__body__mymessage">
-    <div class="communication__body__mymessage__message">
-     <p>Слушай, как не умереть со скуки в этой жизни?</p>
-    </div>
-    <p class="communication__body__date">11 октября, 12:00 </p>
-   </div>
-   <div class="communivation__body__hismessage">
-     <ul>
-       <li><img class="communication__body__ava" src="img/ava-dale.png" alt=""></li>
-       <li><div class="communication__body__hismessage__message">
-         <p>Открою тебе маленький секрет. Каждый день, раз в&nbsp;день, делай себе маленький подарок. Не&nbsp;планируй заранее, не&nbsp;жди его, просто пусть он&nbsp;случается. Это может быть новая рубашка или послеобеденный сон в&nbsp;кабинете, или две чашки хорошего, горячего, черного кофе.</p>
+     <div class="communication__body">
+       <div class="communication__body__mymessage">
+        <div class="communication__body__mymessage__message">
+         <p>Слушай, как не умереть со скуки в этой жизни?</p>
+        </div>
+        <p class="communication__body__mymessage__date">11 октября, 12:00 </p>
        </div>
-       <p class="communication__body__date">11 октября, 16:40 </p></li>
-     </ul>
-   </div>
-   <div class="send">
-     <ul>
-       <li><p>Введите сообщение</p></li>
-       <li><img src="img/send-icn.svg" alt=""></li>
-     </ul>
-   </div>
+       <div class="communivation__body__hismessage">
+         <ul>
+           <li><img class="communication__body__ava" src="img/ava-dale.png" alt=""></li>
+           <li><div class="communication__body__hismessage__message">
+             <p>Открою тебе маленький секрет. Каждый день, раз в&nbsp;день, делай себе маленький подарок. Не&nbsp;планируй заранее, не&nbsp;жди его, просто пусть он&nbsp;случается. Это может быть новая рубашка или послеобеденный сон в&nbsp;кабинете, или две чашки хорошего, горячего, черного кофе.</p>
+           </div>
+           <p class="communication__body__hismessage__date">11 октября, 16:40 </p></li>
+         </ul>
+       </div>
+     </div>
+
+    <div class="send">
+      <ul>
+        <li><p>Введите сообщение</p></li>
+        <li><img src="img/send-icn.svg" alt=""></li>
+      </ul>
+    </div>  
+   </article>
+
 
 </body>
