--- a/twitter.html
+++ b/twitter.html
@@ -21,7 +21,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="twitter2.html">
           <div class="nav__menu__icon nav__menu__icon--chat"></div>
           Сообщения
         </a>
